Fri Mar 10 10:45:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GSDoc/gsdoc-0_6_5.dtd: Altered to add standard conformance to
	individual methods and to make standards rigorous.
	* GSDoc/gsdoc.m: Updated for changes to dtd.

Thu Mar 09 18:07:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Varius bugfixes.
	* Source/NSGAttributedString.m: ditto.

2000-03-07  Adam Fedor  <fedor@gnu.org>

	* configure.in: Remove obsolete header checks for Time class.

Wed Mar 08 07:40:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAttributedString.m: Bugfix by fred Kiefer for extending
	attributes. Related bugfixes by me, plus tidying up.

2000-03-06  Adam Fedor  <fedor@gnu.org>

	* config.guess: Better guess of NetBSD systems.

Sat mar 04 10:08:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/Makefile.postamble: improved messages about gdomap installation.

Mon Feb 28 15:27:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GSDoc: Added GSDoc subdirectory to contain tool for converting gsdoc
	documentation to HTML format.
	* Documentation/gsdoc: Added skeleton documentation for the
	OpenStep/MacOS-X foundation classes in the gsdoc subdirectory.

Sun Feb 27 08:37:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/gnustep/base/NSPortMessage.m: use separate ivars for ports.
	* Source/NSPortMessage.m: modified to use separate ivars for send and
	receive ports so that we can easily pass mutable array for send.

Fri Feb 25 12:56:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPort.m: provide default implementations for methods dealing
	with adding connections to run loop.
	* Source/NSRunLoop.m: Check to see if ports have been invalidated and
	remove them from run loop if they have.

Thu Feb 24 21:05:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: ([-initWithPath:]) added code suggested by