@@ -1,3 +1,7 @@
+Sat Mar 11 21:04:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* GSDoc/gsdoc.m: Updated for recent version of xml library.
+
 Fri Mar 10 10:45:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* GSDoc/gsdoc-0_6_5.dtd: Altered to add standard conformance to
